Labatt POCM Deployment to UAT 09.16.2016/objects/Marketing_Item__c.object
<CustomObject>
    <description>This custom object is used to identify all items that can be included in a Trade Activation Program (Slalom Aug 2016)</description>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand Name</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>Marketing_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_Other_Item_Type__c</fullName>
        <label>If-Other Item Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Program_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Program Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Quebec_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quebec Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Description_EN__c</fullName>
        <label>Item Description (EN)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Description_FR__c</fullName>
        <label>Item Description (FR)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Dimensions__c</fullName>
        <label>Item Dimensions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Type_EN__c</fullName>
        <label>Item Type (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type_FR__c</fullName>
        <label>Item Type (FR)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Unit_of_Measure__c</fullName>
        <label>Item Unit of Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Type__c</fullName>
        <label>Marketing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapEx</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity_Per_UOM__c</fullName>
        <label>Quantity Per UOM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temporary_Item_Number__c</fullName>
        <label>Temporary Item Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All_Trade_Activation_Budweiser_Items</fullName>
        <columns>NAME</columns>
        <columns>Item_Number__c</columns>
        <columns>Brand__c</columns>
        <columns>Marketing_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Is_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Budweiser</value>
        </filters>
        <label>All Trade Activation Budweiser Items</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Trade_Activation_Items</fullName>
        <columns>NAME</columns>
        <columns>Item_Number__c</columns>
        <columns>Brand__c</columns>
        <columns>Marketing_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Is_Available__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Trade Activation Items</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>